--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
             android:layout_height="match_parent"
             tools:context=".screens.main.MainActivity"
             android:orientation="vertical"
-            android:background="#F0E9E9">
+            android:background="#f1f0f6">
         <FrameLayout android:layout_width="match_parent" android:layout_height="200dp">
 
             <ImageView android:layout_width="match_parent"
@@ -25,26 +25,31 @@
 
             />
 
-
-            />
         </FrameLayout>
         <RelativeLayout
                 android:id="@+id/rl_password"
                 android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:background="@drawable/button_selector"
                 android:clickable="true"
         >
+            <View
+
+                    android:layout_alignParentTop="true"
+                    android:layout_width="match_parent" android:layout_height="1dp"
+                    android:background="#f1f0f6"/>
             <ImageView
+                    android:layout_marginLeft="10dp"
                     android:padding="4dp"
-                    android:src="@drawable/icon_password"
+                    android:src="@drawable/icon_pass2"
                     android:id="@+id/img_icon_main"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_centerVertical="true"
             />
             <TextView
+
                     android:layout_marginLeft="20dp"
                     android:layout_toRightOf="@id/img_icon_main" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -54,25 +59,29 @@
                     android:textSize="20sp"/>
             <ImageView
                     android:padding="5dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/icon_next"
-                    android:layout_centerVertical="true" android:layout_width="40dp" android:layout_height="40dp"
+                    android:src="@mipmap/ic_next"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
+
+            <View
+                    android:layout_marginLeft="70dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent" android:layout_height="2dp"
+            android:background="#f1f0f6"/>
         </RelativeLayout>
         <RelativeLayout
-
                 android:id="@+id/rl_wallpaer"
-                android:layout_marginTop="3dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
-                    android:padding="7dp"
-                    android:src="@drawable/icon_wallpaper"
+                    android:layout_marginLeft="10dp"
+                    android:padding="4dp"
+                    android:src="@drawable/icon_wallpaper2"
                     android:id="@+id/img_icon_main1"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_centerVertical="true"
             />
             <TextView
@@ -85,24 +94,28 @@
                     android:textSize="20sp"/>
             <ImageView
                     android:padding="5dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/icon_next"
-                    android:layout_centerVertical="true" android:layout_width="40dp" android:layout_height="40dp"
+                    android:src="@mipmap/ic_next"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
+            <View
+                    android:layout_marginLeft="70dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent" android:layout_height="2dp"
+                    android:background="#f1f0f6"/>
         </RelativeLayout>
         <RelativeLayout
                 android:id="@+id/rl_noti"
-                android:layout_marginTop="3dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
-                    android:padding="5dp"
-                    android:src="@drawable/icon_noti"
+                    android:layout_marginLeft="10dp"
+                    android:padding="4dp"
+                    android:src="@drawable/icon_noiti2"
                     android:id="@+id/img_icon_main2"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_centerVertical="true"
             />
             <TextView
@@ -115,23 +128,28 @@
                     android:textSize="20sp"/>
             <ImageView
                     android:padding="5dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/icon_next"
-                    android:layout_centerVertical="true" android:layout_width="40dp" android:layout_height="40dp"
+                    android:src="@mipmap/ic_next"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
+            <View
+                    android:layout_marginLeft="70dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent" android:layout_height="2dp"
+                    android:background="#f1f0f6"/>
         </RelativeLayout>
         <RelativeLayout
                 android:id="@+id/rl_cancle_lock"
-                android:layout_marginTop="3dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
-                    android:src="@drawable/icon_cancle"
+                    android:padding="4dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/icon_setting"
                     android:id="@+id/img_icon_main3"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_centerVertical="true"
             />
             <TextView
@@ -143,25 +161,32 @@
                     android:layout_centerVertical="true"
                     android:textSize="20sp"/>
             <ImageView
+                    android:layout_marginLeft="10dp"
                     android:padding="5dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/icon_next"
-                    android:layout_centerVertical="true" android:layout_width="40dp" android:layout_height="40dp"
+                    android:src="@mipmap/ic_next"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
+            <View
+
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent" android:layout_height="2dp"
+                android:background="#f1f0f6"/>
+
         </RelativeLayout>
         <RelativeLayout
                 android:id="@+id/rl_feedback"
                 android:layout_marginTop="40dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
+                    android:layout_marginLeft="10dp"
                     android:padding="7dp"
                     android:src="@drawable/icon_feedback"
                     android:id="@+id/img_icon_main4"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_centerVertical="true"
             />
             <TextView
@@ -174,23 +199,28 @@
                     android:textSize="20sp"/>
             <ImageView
                     android:padding="5dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/icon_next"
-                    android:layout_centerVertical="true" android:layout_width="40dp" android:layout_height="40dp"
+                    android:src="@mipmap/ic_next"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
+            <View
+                    android:layout_marginLeft="70dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent" android:layout_height="2dp"
+                    android:background="#f1f0f6"/>
+
         </RelativeLayout>
         <RelativeLayout
                 android:id="@+id/rl_shae"
-                android:layout_marginTop="3dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
+                    android:layout_marginLeft="10dp"
                     android:src="@drawable/icon_share"
                     android:id="@+id/img_icon_main5"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_centerVertical="true"
             />
             <TextView
@@ -203,10 +233,14 @@
                     android:textSize="20sp"/>
             <ImageView
                     android:padding="5dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/icon_next"
-                    android:layout_centerVertical="true" android:layout_width="40dp" android:layout_height="40dp"
+                    android:src="@mipmap/ic_next"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
+            <View
+
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent" android:layout_height="2dp"
+                    android:background="#f1f0f6"/>
         </RelativeLayout>
     </LinearLayout>
 </ScrollView>
