--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="white">#FFFF</color>
-    <color name="click">#ACA8AA</color>
+    <color name="white">#ffffff</color>
+    <color name="click">#f1f0f6</color>
 </resources>
