--- a/app/src/main/res/drawable/circle_password.xml
+++ b/app/src/main/res/drawable/circle_password.xml
@@ -3,4 +3,7 @@
     <stroke
             android:width="1dp"
             android:color="#FFFF"/>
+    <size android:width="250dp" android:height="250dp"/>
 </shape>
+
+
