--- a/app/src/main/res/drawable/circle_password2.xml
+++ b/app/src/main/res/drawable/circle_password2.xml
@@ -1,7 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
-    <solid android:color="#DADEE0"/>
     <stroke
-            android:width="2dp"
-            android:color="#444444"/>
+            android:width="1dp"
+            android:color="#494949"/>
+    <solid android:color="#ffff"/>
+
 </shape>
+
