--- a/app/src/main/res/drawable/while_round_bg.xml
+++ b/app/src/main/res/drawable/while_round_bg.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#8D8888"></solid>
+    <solid android:color="#fffdfd"></solid>
     <corners android:radius="15dp"></corners>
 
 </shape>
