--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_height="match_parent" android:layout_width="match_parent">
+            android:layout_height="match_parent" android:layout_width="match_parent"
+            xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:context=".screens.main.MainActivity"
             android:orientation="vertical"
             android:background="#f1f0f6">
         <FrameLayout android:layout_width="match_parent" android:layout_height="200dp">
+
 
             <ImageView android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/icon_main"
                        android:scaleType="fitXY"/>
 
-            <Switch
-
-                    android:scaleX="1.5"
-                    android:scaleY="1.5"
+            <com.suke.widget.SwitchButton
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
                     android:id="@+id/switch_main"
-                    android:layout_width="100dp" android:layout_height="50dp"
-
+                    android:layout_width="90dp" android:layout_height="45dp"
+                    app:sb_show_indicator="false"
             />
+
 
         </FrameLayout>
         <RelativeLayout
@@ -54,20 +55,21 @@
                     android:layout_toRightOf="@id/img_icon_main" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Password"
-                    android:textColor="#000"
+                    android:textColor="#010101"
                     android:layout_centerVertical="true"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"/>
             <ImageView
                     android:padding="5dp"
                     android:src="@mipmap/ic_next"
-                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
 
             <View
                     android:layout_marginLeft="70dp"
                     android:layout_alignParentBottom="true"
                     android:layout_width="match_parent" android:layout_height="2dp"
-            android:background="#f1f0f6"/>
+                    android:background="#f1f0f6"/>
         </RelativeLayout>
         <RelativeLayout
                 android:id="@+id/rl_wallpaer"
@@ -89,9 +91,9 @@
                     android:layout_toRightOf="@id/img_icon_main1" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Wallpaper"
-                    android:textColor="#000"
+                    android:textColor="#010101"
                     android:layout_centerVertical="true"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"/>
             <ImageView
                     android:padding="5dp"
                     android:src="@mipmap/ic_next"
@@ -123,9 +125,9 @@
                     android:layout_toRightOf="@id/img_icon_main2" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Notification"
-                    android:textColor="#000"
+                    android:textColor="#010101"
                     android:layout_centerVertical="true"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"/>
             <ImageView
                     android:padding="5dp"
                     android:src="@mipmap/ic_next"
@@ -144,7 +146,7 @@
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
-                    android:padding="4dp"
+                    android:padding="3dp"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/icon_setting"
                     android:id="@+id/img_icon_main3"
@@ -157,9 +159,9 @@
                     android:layout_toRightOf="@id/img_icon_main3" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Disable system lock"
-                    android:textColor="#000"
+                    android:textColor="#010101"
                     android:layout_centerVertical="true"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"/>
             <ImageView
                     android:layout_marginLeft="10dp"
                     android:padding="5dp"
@@ -181,8 +183,8 @@
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
+                    android:padding="3.5dp"
                     android:layout_marginLeft="10dp"
-                    android:padding="7dp"
                     android:src="@drawable/icon_feedback"
                     android:id="@+id/img_icon_main4"
                     android:layout_width="40dp"
@@ -194,9 +196,9 @@
                     android:layout_toRightOf="@id/img_icon_main4" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Feedback"
-                    android:textColor="#000"
+                    android:textColor="#010101"
                     android:layout_centerVertical="true"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"/>
             <ImageView
                     android:padding="5dp"
                     android:src="@mipmap/ic_next"
@@ -210,12 +212,13 @@
 
         </RelativeLayout>
         <RelativeLayout
-                android:id="@+id/rl_shae"
+                android:id="@+id/rl_share"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/button_selector"
                 android:clickable="true">
             <ImageView
+                    android:padding="3dp"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/icon_share"
                     android:id="@+id/img_icon_main5"
@@ -228,16 +231,50 @@
                     android:layout_toRightOf="@id/img_icon_main5" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Share"
-                    android:textColor="#000"
+                    android:textColor="#010101"
                     android:layout_centerVertical="true"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"/>
             <ImageView
                     android:padding="5dp"
                     android:src="@mipmap/ic_next"
                     android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
                     android:layout_alignParentRight="true"/>
             <View
-
+                    android:layout_marginLeft="70dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent" android:layout_height="2dp"
+                    android:background="#f1f0f6"/>
+        </RelativeLayout>
+        <RelativeLayout
+                android:id="@+id/rl_privacy"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/button_selector"
+                android:clickable="true">
+            <ImageView
+                    android:layout_marginLeft="10dp"
+                    android:padding="3dp"
+                    android:src="@drawable/icon_baomat"
+                    android:id="@+id/img_icon_main9"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+            />
+            <TextView
+                    android:layout_marginLeft="20dp"
+                    android:layout_toRightOf="@id/img_icon_main9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Privacy Policy"
+                    android:textColor="#010101"
+                    android:layout_centerVertical="true"
+                    android:textSize="16sp"/>
+            <ImageView
+                    android:padding="5dp"
+                    android:src="@mipmap/ic_next"
+                    android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
+                    android:layout_alignParentRight="true"/>
+            <View
                     android:layout_alignParentBottom="true"
                     android:layout_width="match_parent" android:layout_height="2dp"
                     android:background="#f1f0f6"/>
