--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -6,37 +6,51 @@
         android:layout_height="match_parent"
         tools:context=".screens.password.NewPassword"
         android:orientation="vertical"
-        android:background="#F0E9E9">
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
-        <ImageView android:id="@+id/img_back"
-                   android:layout_width="65dp" android:layout_height="50dp"
-                   android:src="@mipmap/ic_back2"
-        />
+        android:background="#f1f0f6">
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:background="#ffffff">
+        <LinearLayout
+                android:clickable="true"
+                android:id="@+id/img_back"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <ImageView
+                    android:layout_width="25dp" android:layout_height="60dp"
+                    android:src="@mipmap/ic_back22"
+            />
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="Setting"
+                      android:layout_gravity="center_vertical"
+                      android:textColor="#196CFF"
+                      android:textSize="15sp"/>
+        </LinearLayout>
         <TextView
                 android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Set New Your Password"
-                android:textColor="#F00"
-                android:textSize="20sp"/>
+                android:text="Set New Password"
+                android:textColor="#000"
+                android:textSize="17sp"/>
     </RelativeLayout>
 
     <EditText
-            android:background="@drawable/icon_bg_edt"
+            android:textSize="15sp"
+            android:background="@drawable/edittext"
             android:layout_marginHorizontal="20dp"
             android:maxLength="6"
             android:id="@+id/edt_pass_new"
             android:layout_marginTop="20dp"
-            android:hint="Enter your new password"
+            android:hint="Enter new password"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:inputType="numberPassword"
 
     />
     <EditText
-            android:background="@drawable/icon_bg_edt"
+            android:textSize="15sp"
+            android:background="@drawable/edittext"
             android:layout_marginHorizontal="20dp"
             android:maxLength="6"
             android:inputType="numberPassword"
@@ -49,11 +63,11 @@
 
     />
     <Button
-            android:background="@drawable/nenchat"
+            android:background="@drawable/buttonconfi"
             android:id="@+id/btn_confirm_new"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="80dp"
             android:layout_gravity="center_horizontal"
-            android:layout_width="100dp" android:layout_height="40dp"
+            android:layout_width="120dp" android:layout_height="40dp"
     android:text="confirm"/>
 
 
