--- a/app/src/main/res/layout/activity_password_authentic.xml
+++ b/app/src/main/res/layout/activity_password_authentic.xml
@@ -6,29 +6,41 @@
         android:layout_height="match_parent"
         tools:context=".screens.password.NewPassword"
         android:orientation="vertical"
-        android:background="#F0E9E9">
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
-        <ImageView android:id="@+id/img_back"
-                   android:layout_width="65dp" android:layout_height="50dp"
-                   android:src="@mipmap/ic_back2"
-        />
+        android:background="#f1f0f6"
+>
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="50dp"
+                    android:background="#ffffff">
+        <LinearLayout
+                android:clickable="true"
+                android:id="@+id/img_back"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <ImageView
+                    android:layout_width="25dp" android:layout_height="50dp"
+                    android:src="@mipmap/ic_back22"
+            />
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="Setting"
+                      android:layout_gravity="center_vertical"
+                      android:textColor="#196CFF"
+                      android:textSize="14sp"/>
+        </LinearLayout>
         <TextView
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Enter Your Password"
-                android:textColor="#F00"
-                android:textSize="20sp"/>
+                android:textColor="#000"
+                android:textSize="17sp"/>
     </RelativeLayout>
 
     <EditText
-            android:background="@drawable/icon_bg_edt"
+            android:background="@drawable/edittext"
             android:layout_marginHorizontal="20sp"
             android:maxLength="6"
             android:id="@+id/edt_pass_new"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:hint="Enter your password"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -37,11 +49,11 @@
     />
 
     <Button
-            android:background="@drawable/nenchat"
+            android:background="@drawable/buttonconfi"
             android:id="@+id/btn_confirm_new"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_width="100dp" android:layout_height="40dp"
+            android:layout_width="120dp" android:layout_height="40dp"
             android:text="confirm"/>
 
 
