--- a/app/src/main/res/layout/activity_set_wallpaper.xml
+++ b/app/src/main/res/layout/activity_set_wallpaper.xml
@@ -10,10 +10,21 @@
         android:background="#F0E9E9">
     <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
     android:background="#fff">
-        <ImageView android:id="@+id/img_back"
-                   android:layout_width="65dp" android:layout_height="50dp"
-                   android:src="@mipmap/ic_back2"
-        />
+        <LinearLayout
+                android:clickable="true"
+                android:id="@+id/img_back"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <ImageView
+                    android:layout_width="25dp" android:layout_height="50dp"
+                    android:src="@mipmap/ic_back22"
+            />
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="Setting"
+                      android:layout_gravity="center_vertical"
+                      android:textColor="#196CFF"
+                      android:textSize="15sp"/>
+        </LinearLayout>
         <TextView
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
@@ -21,33 +32,49 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set Your Wallpaper"
-                android:textColor="#F00"
-                android:textSize="20sp"/>
+                android:textColor="#000"
+                android:textSize="17sp"/>
     </RelativeLayout>
     <RelativeLayout
-            android:clickable="true"
             android:id="@+id/rl_select_from"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:background="@drawable/button_selector"
-            android:layout_marginTop="5dp"
-                    android:layout_width="match_parent" android:layout_height="wrap_content">
-        <TextView android:layout_marginLeft="10dp"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:text="Select From Gallery"
-                  android:textSize="20sp"
-                  android:textColor="#2196F3"
-        android:layout_centerVertical="true"/>
+            android:clickable="true">
+        <View
+                android:layout_alignParentTop="true"
+                android:layout_width="match_parent" android:layout_height="3dp"
+                android:background="#f1f0f6"/>
         <ImageView
-                android:background="@drawable/button_selector"
+                android:layout_marginLeft="10dp"
+                android:padding="4dp"
+                android:src="@drawable/icon_album2"
+                android:id="@+id/img_icon_main1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="5dp"
-                android:id="@+id/img_add_photo"
-                android:layout_width="50dp" android:layout_height="40dp"
-                android:src="@drawable/icon_add_photo"
         />
+        <TextView
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/img_icon_main1" android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select From Gallery"
+                android:textColor="#03A9F4"
+                android:layout_centerVertical="true"
+                android:textSize="16sp"/>
+        <ImageView
+                android:padding="5dp"
+                android:src="@mipmap/ic_next"
+                android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="40dp"
+                android:layout_alignParentRight="true"/>
+        <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent" android:layout_height="3dp"
+                android:background="#f1f0f6"/>
     </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="5dp"
+
             android:background="#FFF"
             android:id="@+id/rv_wallpaper"
             android:layout_width="match_parent"
