--- a/app/src/main/res/layout/lock_layout.xml
+++ b/app/src/main/res/layout/lock_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-        android:id="@+id/ll_frame"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ll_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -11,8 +11,7 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY"
             android:src="@drawable/icon_background_lock"
-            />
-
+    />
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -56,29 +55,25 @@
                     android:layout_width="40dp" android:layout_height="match_parent"/>
 
         </RelativeLayout>
+
         <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                       android:layout_weight="7.6"
                       android:orientation="vertical">
 
 
-            <RelativeLayout
-                    android:layout_marginTop="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/background"
-                    android:layout_width="50dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_height="50dp">
+
                 <ImageView
+                        android:layout_gravity="center_horizontal"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
-                        android:layout_width="20dp"
-                        android:src="@drawable/icon_lock"
-                        android:layout_height="30dp"/>
-            </RelativeLayout>
+                        android:layout_width="50dp"
+                        android:src="@drawable/a1"
+                        android:layout_height="50dp"/>
+
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:text="10:10"
-                      android:textSize="70dp"
+                      android:textSize="70sp"
                       android:textColor="#FFFF"
                       android:id="@+id/tv_time"
             />
@@ -89,6 +84,28 @@
                     android:textColor="#FFFF"
                     android:text="Thứ Tư,5 tháng 8"
                     android:id="@+id/tv_date"/>
+
+            <RelativeLayout android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+           >
+                <ImageView
+
+                        android:src="@mipmap/ic_clear2"
+                        android:layout_alignParentRight="true"
+                        android:id="@+id/img_clear"
+                        android:layout_width="50dp" android:layout_height="30dp"
+                />
+                <androidx.recyclerview.widget.RecyclerView
+                        android:layout_below="@id/img_clear"
+                        android:layout_marginTop="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/rv_notifi"
+                >
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </RelativeLayout>
+
         </LinearLayout>
 
         <RelativeLayout
@@ -99,35 +116,30 @@
                 android:weightSum="2">
             <RelativeLayout
                     android:id="@+id/rl_flash"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginLeft="35dp"
                     android:layout_marginTop="10dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/background"
+                    android:background="@drawable/cirlce"
                     android:layout_width="50dp"
                     android:layout_height="50dp">
                 <ImageView
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="20dp"
-                        android:src="@drawable/icon_flash"
-                        android:layout_height="30dp"/>
+                        android:layout_width="50dp"
+                        android:src="@drawable/a2"
+                        android:layout_height="50dp"/>
             </RelativeLayout>
             <RelativeLayout
                     android:id="@+id/rl_camera"
                     android:layout_marginTop="10dp"
                     android:layout_alignParentRight="true"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/background"
+                    android:background="@drawable/cirlce"
                     android:layout_width="50dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginRight="35dp"
                     android:layout_height="50dp">
                 <ImageView
                         android:id="@+id/img_camera"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="20dp"
-                        android:src="@drawable/icon_camera"
-                        android:layout_height="30dp"/>
+                        android:layout_width="50dp"
+                        android:src="@drawable/a4"
+                        android:layout_height="50dp"/>
             </RelativeLayout>
 
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
@@ -135,11 +147,11 @@
                       android:layout_centerHorizontal="true"
                       android:text="Slide up to open"
                       android:textColor="#FFFF"
-                      android:layout_marginBottom="5dp"
+                      android:layout_marginBottom="10dp"
             />
             <Button android:id="@+id/viewBottom"
                     android:background="@drawable/while_round_bg"
-                    android:layout_width="200dp" android:layout_height="6dp"
+                    android:layout_width="150dp" android:layout_height="4dp"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="10dp"/>
