--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -9,7 +9,7 @@
 
     <ImageView android:layout_width="match_parent"
                android:layout_height="match_parent"
-               android:scaleType="fitXY"
+               android:scaleType="centerCrop"
                android:src="@drawable/icon_splash"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
