--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="click">#f1f0f6</color>
+    <color name="color_select">#c6c6c6</color>
+    <color name="color_select2">#413F3F</color>
 </resources>
