--- a/app/src/main/res/layout/activity_set_wallpaper2.xml
+++ b/app/src/main/res/layout/activity_set_wallpaper2.xml
@@ -9,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/icon_background_lock"
-            android:scaleType="centerCrop"/>
+            android:scaleType="fitXY"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
@@ -63,11 +63,11 @@
             >
 
 
-                    <ImageView
-                            android:layout_gravity="center_horizontal"
-                            android:layout_width="50dp"
-                            android:src="@drawable/a1"
-                            android:layout_height="50dp"/>
+                <ImageView
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="50dp"
+                        android:src="@drawable/a1"
+                        android:layout_height="50dp"/>
 
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:layout_gravity="center_horizontal"
