--- a/app/src/main/res/layout/layout_password.xml
+++ b/app/src/main/res/layout/layout_password.xml
@@ -3,6 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:id="@+id/ln_layoutpass"
               android:background="@drawable/background_lock"
               android:weightSum="10">
     <RelativeLayout android:layout_width="match_parent" android:layout_height="0dp"
@@ -16,11 +17,12 @@
                 android:src="@drawable/icon_song"/>
 
         <TextView
+                android:id="@+id/tv_telecom"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/img_song"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Viettel"
+                android:text="Vina"
                 android:textColor="#FFFF"
                 android:textSize="13sp"/>
         <TextView
@@ -42,7 +44,9 @@
     <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                   android:layout_weight="2"
                   android:orientation="vertical">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        <TextView
+                android:id="@+id/tv_notification"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:text="Touch ID or Password"
                   android:textColor="#FFF"
                   android:layout_gravity="center_horizontal"
