fix full no design

--- a/app/src/main/res/layout/activity_password_authentic.xml
+++ b/app/src/main/res/layout/activity_password_authentic.xml
@@ -36,6 +36,7 @@
     </RelativeLayout>
 
     <EditText
+            android:textAlignment="center"
             android:background="@drawable/edittext"
             android:layout_marginHorizontal="20sp"
             android:maxLength="6"
