--- a/app/src/main/res/layout/activity_change.xml
+++ b/app/src/main/res/layout/activity_change.xml
@@ -41,6 +41,7 @@
                 android:textSize="17sp"/>
     </RelativeLayout>
     <EditText
+            android:textAlignment="center"
             android:background="@drawable/edittext"
             android:layout_marginHorizontal="20dp"
             android:maxLength="6"
@@ -55,6 +56,7 @@
     />
 
     <EditText
+            android:textAlignment="center"
             android:textSize="15sp"
             android:background="@drawable/edittext"
             android:layout_marginHorizontal="20dp"
@@ -68,6 +70,7 @@
 
     />
     <EditText
+            android:textAlignment="center"
             android:textSize="15sp"
             android:background="@drawable/edittext"
             android:layout_marginHorizontal="20dp"
