--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -36,6 +36,7 @@
     </RelativeLayout>
 
     <EditText
+            android:textAlignment="center"
             android:textSize="15sp"
             android:background="@drawable/edittext"
             android:layout_marginHorizontal="20dp"
@@ -49,6 +50,7 @@
 
     />
     <EditText
+            android:textAlignment="center"
             android:textSize="15sp"
             android:background="@drawable/edittext"
             android:layout_marginHorizontal="20dp"
