--- a/app/src/main/res/layout/activity_set_wallpaper2.xml
+++ b/app/src/main/res/layout/activity_set_wallpaper2.xml
@@ -157,7 +157,7 @@
                           android:layout_weight="1"
                           android:background="@drawable/button_selector2">
                 <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-                          android:text="Cancle"
+                          android:text="Cancel"
                           android:gravity="center"
                           android:textColor="#000"
                 />
