--- a/app/src/main/res/layout/layout_password2.xml
+++ b/app/src/main/res/layout/layout_password2.xml
@@ -196,7 +196,7 @@
                 android:id="@+id/tv_cancle_pass"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
-                android:text="Cancle"
+                android:text="Cancel"
                 android:textColor="#FFFF"
                 android:layout_marginRight="50dp"
                 android:textSize="17sp"/>
